# UsefulPython

./: ArcGIS Generate Token.ipynb
ArcGISSolutionDeploymentTool/: SolutionDeployment.esriAddInX
Compare csv/: CoveredCities.csv  cities.csv  citycompare.py  coverage_agencies.txt
CreateInformationModel/: main.py  runner.py
IHS Markit/: SampleMessage.json  epop.csv
Solution Design/: Starbuck_Exercise_Solution_Design.xlsx  Template_Solution_Design.xlsx  (+1 more)
Week Two AIML/: PE_Numpy.ipynb  (+5 more)
esri_system_health_check/: pyproject.toml  start_python_notebook.bat
esri_system_health_check/.ipynb_checkpoints/: Get Current Path-checkpoint.ipynb  starting_code_for_system_health_check-checkpoint.ipynb
esri_system_health_check/src/esri_system_health_check/: Appending Content.ipynb  ReadMe.txt  main (2).py  main.py  runner.bat  starting_code_for_system_health_check.ipynb  worldcities_small.csv
esri_system_health_check/src/esri_system_health_check/.ipynb_checkpoints/: Appending Content-checkpoint.ipynb  starting_code_for_system_health_check-checkpoint.ipynb
esri_system_health_check/src/esri_system_health_check/common/: common.py
esri_system_health_check/src/esri_system_health_check/config/: config.ini
esri_system_health_check/src/esri_system_health_check/shapefiles/: AreaGrid.sbn  AreaGrid.sbx  AreaGrid.shp  AreaGrid.shp.xml  AreaGrid.shx  SamplePoints.dbf  SamplePoints.sbn  SamplePoints.sbx  SamplePoints.shp  SamplePoints.shp.xml  SamplePoints.shx
h3/: Untitled8.ipynb  main.py  pyproject.toml  runner.bat
h3/.ipynb_checkpoints/: Untitled8-checkpoint.ipynb
h3/common/: common.py
h3/poly_hex.zip/: poly_hex.dbf  poly_hex.shp  poly_hex.shx
update_feature_service/: Appending Content.ipynb  Appending Features to a Feature Layer from a DataFrame.ipynb  Testing ArcGIS Connection.ipynb  Testing ArcGIS Content.ipynb  Untitled.ipynb  arcgis_helpers.py  pyproject.toml  runner.py  start_python_notebook.bat
update_feature_service/.ipynb_checkpoints/: Appending Content-checkpoint.ipynb  Testing ArcGIS Connection-checkpoint.ipynb  Testing ArcGIS Content-checkpoint.ipynb  Untitled-checkpoint.ipynb
(+149 files in other folders)
