[tool.poetry]
name = "esri system health check"
version = "1.0.0"
description = "description of esri system health check"
authors = ["RebeccaBeitel <rebecca.beitel@foretify.ai>"]
license = "apache-2.0"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
arcgis = {path = "resources/tar/arcgis-2.1.0.tar.gz"}


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
