[tool.poetry]
name = "CrimeIndex"
version = "1.0.0"
description = "This is a package that will be used to pull information from open data portals"
authors = ["Your Name <you@example.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"


numpy = "^1.23.1"
requests = "^2.28.1"
pandas = "^1.4.3"
sodapy = "^2.1.1"
psycopg2 = "^2.9"
sqlalchemy =  "^1.2"
openpyxl = "^3.0.10"
arcgis = {path = "resources/tar/arcgis-2.1.0.tar.gz"}
h3 = "^3.7.4"
shapely = "^1.8.5.post1"
geopandas = "^0.10.2"
selenium = "^4.8.2"
bs4 = "^0.0.1"
seaborn = "^0.12.2"
geopy = "^2.3.0"
urllib3= "1.26.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
